crates/unsoundness_checker/tests/snapshots/mangled_dunder_instance_variable/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_HiddenDunderVariables__str_x` can bypass type checking and lead to runtime type errors.
 --> snippet_01.py:4:9
  |
2 |     def __init__(self, x: int) -> None:
3 |         self.__str_x = str(x)
4 |         self._HiddenDunderVariables__str_x = x
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 |     def get_str_x(self) -> str:
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file

error[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_HiddenDunderVariables__str_x` can bypass type checking and lead to runtime type errors.
  --> snippet_01.py:16:1
   |
15 | # We should also not be able to set it
16 | hidden_dunder_variables._HiddenDunderVariables__str_x = 1
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file
